--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -2,6 +2,8 @@ django-cms<3.5
 djangocms-admin-style>=1.2,<1.3
 django-treebeard>=4.0,<5.0
 
+djangocms-slick-slider
+
 djangocms-text-ckeditor>=3.2.1
 djangocms-link>=1.8
 djangocms-style>=1.7
@@ -19,3 +21,7 @@ html5lib>=0.999999,<0.99999999
 Pillow>=3.0
 django-sekizai>=0.9
 six
+
+# Dev puposes
+django-extensions
+jsonfield
