--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
-recursive-include djangocms_slick_slider *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
+recursive-include djangocms_slick_slider *.html *.png *.gif *js *.css *jpg *jpeg *svg *py *eot *ttf *woff
