--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -3,7 +3,7 @@ mock>=1.0.1
 flake8>=2.1.0
 tox>=1.7.0
 codecov>=2.0.0
-
+factory_boy
 
 # Additional test requirements go here
 # Additional requirements go here
