--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,9 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/djangocms_slick_slider
 commands = coverage run --source djangocms_slick_slider runtests.py
 deps =
-    django-18: Django>=1.8,<1.9
-    django-19: Django>=1.9,<1.10
-    django-110: Django>=1.10
+    django-18: https://github.com/divio/django-cms/archive/release/3.4.x.zip
+    django-19: https://github.com/divio/django-cms/archive/release/3.4.x.zip
+    django-110: https://github.com/divio/django-cms/archive/release/3.4.x.zip
     -r{toxinidir}/requirements_test.txt
 basepython =
     py35: python3.5
