fix: add package json to versionrc

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,4 +1,10 @@
 {
+  "packageFiles": [
+    {
+      "filename": "package.json",
+      "type": "json"
+    }
+  ],
   "bumpFiles": [
     {
       "filename": "djangocms_slick_slider/version.json",
