--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,12 @@
+[bumpversion]
+current_version = 1.0.7
+
 [wheel]
 universal = 1
 
 [flake8]
 ignore = D203
-exclude =
+exclude = 
 	djangocms_slick_slider/migrations,
 	.git,
 	.tox,
