chore: enable vscode type checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/Zentrale/.pyenv/shims/python"
+  "python.pythonPath": "/Users/Zentrale/.pyenv/shims/python",
+  "python.analysis.typeCheckingMode": "basic"
 }
