chore: gh actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,6 @@
 [tox]
 envlist =
-    {py27,py33,py34,py35}-django-18
-    {py27,py34,py35}-django-19
-    {py27,py34,py35}-django-110
+    {py36,py37}-django-300
 skip_missing_interpreters = True
 
 [testenv]
@@ -10,12 +8,9 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/djangocms_slick_slider
 commands = coverage run --source djangocms_slick_slider runtests.py
 deps =
-    django-18: https://github.com/divio/django-cms/archive/release/3.4.x.zip
-    django-19: https://github.com/divio/django-cms/archive/release/3.4.x.zip
-    django-110: https://github.com/divio/django-cms/archive/release/3.4.x.zip
+    django-300: https://github.com/divio/django-cms/archive/release/3.9.x.zip
     -r{toxinidir}/requirements_test.txt
 basepython =
     py35: python3.5
     py34: python3.4
     py33: python3.3
-    py27: python2.7
