--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,9 +1,9 @@
 coverage>=4.4.1
-django-coverage-plugin>=3.1.0
 mock>=1.0.1
 flake8>=2.1.0
 tox>=1.7.0
 codecov>=2.0.0
 
-
 # Additional test requirements go here
+django-coverage-plugin>=3.1.0
+djangocms-helper>=1.2.5
