--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,12 @@
+[gh]
+python =
+    3.12 = py312
+    3.11 = py311, type
+    3.10 = py310
+    3.9 = py39
+    3.8 = py38
+    3.7 = py37
+
 [tox]
 envlist =
     {py37,py38,py39,py310}-django-300
