--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,50 @@
-[gh]
-python =
-    3.12 = py312
-    3.11 = py311, type
-    3.10 = py310
-    3.9 = py39
-    3.8 = py38
-    3.7 = py37
-
 [tox]
 envlist =
-    {py37,py38,py39,py310}-django-300
-skip_missing_interpreters = True
+  py36-django{32}
+  py37-django{32}
+  py38-django{32,40,41,42}
+  py39-django{32,40,41,42}
+  py310-django{32,40,41,42}
+  py311-django{41,42}
+  flake8
+  isort
+
+[gh-actions]
+python =
+  3.6: py36-django{32}
+  3.7: py37-django{32}
+  3.8: py38-django{32,40,41,42}
+  3.9: py39-django{32,40,41,42}
+  3.10: py310-django{32,40,41,42}
+  3.11: py311-django{41,42}, flake8, isort
+fail_on_no_env = True
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/djangocms_slick_slider
-commands = coverage run --source djangocms_slick_slider runtests.py
 deps =
-    django-300: https://github.com/divio/django-cms/archive/release/3.9.x.zip
-    -r{toxinidir}/requirements_test.txt
-basepython =
+  pytest
+  pytest-xdist
+  django32: Django>=3.2,<3.3
+  django40: Django>=4.0,<4.1
+  django41: Django>=4.1,<4.2
+  django42: Django>=4.2,<4.3
+  flake8
+  isort
+commands = py.test {posargs}
+
+[testenv:flake8]
+# Note: Settings for flake8 exists in the setup.cfg file
+changedir = {toxinidir}
+deps = flake8
+commands =
+  flake8 .
+
+[testenv:isort]
+# Note: Settings for isort exists in the setup.cfg file
+changedir = {toxinidir}
+deps = isort
+commands =
+  isort --check-only --diff django_components
+
     py35: python3.5
     py34: python3.4
     py33: python3.3
