chore: test reqs

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ deps =
   django42: Django>=4.2,<4.3
   flake8
   isort
+  -r{toxinidir}/requirements_test.txt
 commands = py.test {posargs}
 
 [testenv:flake8]
