--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,10 +1,4 @@
-coverage>=4.4.1
-mock>=1.0.1
-flake8>=2.1.0
-tox>=1.7.0
-codecov>=2.0.0
-
-# Additional test requirements go here
-django-coverage-plugin>=3.1.0
-factory-boy>= 3.2.1
-django-app-helper>=3.3.1
+mock
+django-coverage-plugin
+factory-boy
+django-app-helper
