--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,9 @@ deps =
   django42: Django>=4.2,<4.3
   flake8
   isort
-  -r{toxinidir}/requirements_test.txt
+  django-coverage-plugin
+  factory-boy
+  django-app-helper
 commands = py.test {posargs}
 
 [testenv:flake8]
