--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ deps =
   django42: Django>=4.2,<4.3
   flake8
   isort
+  django-cms
   django-coverage-plugin
   factory-boy
   django-app-helper
